--- a/Estimator.Ui/Views/_ViewImports.cshtml
+++ b/Estimator.Ui/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Estimator.Web
-@using Estimator.Web.Models
+﻿@using Estimator.Ui
+@using Estimator.Ui.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
